[project]
name = "udemy-taming-big-data-with-apache-spark4-and-python-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "response>=0.5.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
]

[tool.ruff.format]
# Configure code formatting style
quote-style = "single"
indent-style = "space"
